--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -91,7 +91,6 @@ footer {
   border-top: 1px solid $gray-medium-light;
   color: $light-gray;
 
-
   a {
     color: $gray;
     &:hover {
@@ -114,6 +113,21 @@ footer {
     }
   }
 
+}
+
+@media (max-width: 800px) {
+  footer { 
+    small {
+      display: block; float: none; margin-bottom: 1em;
+    } 
+    ul {
+      float: none; padding: 0;
+      li {
+        float: none;
+        margin-left: 0; 
+      }
+    }
+  }
 }
 
 /* miscellaneous */
@@ -189,3 +203,9 @@ input {
     color: $state-danger-text;
   }
 }
+
+/* Dropdown menu */
+.dropdown-menu.active {
+  display: block;
+}
+
